log

Fri 15 Mar 2024 01:51:13 AM UTC: 
 tests:  0|7
total_score: 0/70
cbe4308
Fri 15 Mar 2024 01:53:34 AM UTC: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  0|7
total_score: 0/70
94c02e0
Fri 15 Mar 2024 01:54:01 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
2ae1318
Fri 15 Mar 2024 01:56:00 AM UTC: 
 exercises.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
3211c66
Fri 15 Mar 2024 01:56:21 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
7086920
Fri 15 Mar 2024 01:56:37 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
9c3c133
Fri 15 Mar 2024 01:57:32 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:32:7: error: expected expression before ‘]’ token
   32 |   arr[] = auxarr[];
      |       ^
exercises.c:28:7: error: variable ‘auxarr’ set but not used [-Werror=unused-but-set-variable]
   28 |   int auxarr[size - 1];
      |       ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
72669ef
Fri 15 Mar 2024 01:57:44 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
5e81076
